--- a/style.css
+++ b/style.css
@@ -85,6 +85,25 @@ nav a:hover {
   color: rgb(250, 120, 142);
 }
 
+.hamburger {
+  display: none;
+}
+
+.hamburger-icon {
+  width: 30px;
+  margin: 10px auto 0 auto;
+  display: none;
+  cursor: pointer;
+}
+
+.line {
+  height: 4px;
+  width: 30px;
+  background-color: rgb(247, 169, 182);;
+  margin-bottom: 4px;
+
+}
+
 /* --- MAIN FRONTPAGE --- */
 
 .contact-info {
@@ -105,6 +124,11 @@ table {
   font-weight: bold;
   text-align: right;
   padding-right: 5px;
+}
+
+iframe {
+  height: 450px;
+  width: 100%;
 }
 
 /* --- MAIN LOGIN --- */
